# translator-django

./: .gitignore  Pipfile  Pipfile-dev  Procfile  README.md  manage.py  pyproject.toml  requirements-debug.txt  requirements.txt
docs/: scripts.html  search.js  worker.html
docs/scripts/: parser.html  scrape.html  translate.html
scripts/: parser.py  scrape.py  translate.py
templates/: base.html
templates/pages/: 404.html  create_project.html  delete_project.html  home.html  login.html  project_details.html  projects_list.html  sentences_list.html
templates/partials/: no_sidebar.html  with_sidebar.html
translator/: asgi.py  settings.py  urls.py  wsgi.py
worker/: admin.py  models.py  urls.py  views.py
worker/forms/: forms.py
worker/migrations/: 0001_initial.py  0002_project_accessible_to.py  0003_alter_project_accessible_to.py  0004_remove_project_accessible_to_project_accessible_to.py  0005_alter_sentence_options_sentence_accessible_to.py
