[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend task for internship"
authors = ["Anuran Roy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-debug-toolbar = "^3.2.4"
djangorestframework = "^3.13.1"
Wikipedia-API = "^0.5.4"
gunicorn = "^20.1.0"
django-filter = "^21.1"
psycopg2 = "^2.9.3"
pysbd = "^0.3.4"
spacy = "^3.2.4"
uvicorn = "^0.17.6"
pdoc = "^11.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
